proper folder to upload

--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
     "dev": "wp-pwa dev",
     "start": "wp-pwa dev",
     "preview": "wp-pwa preview",
-    "build": "wp-pwa build UXX221Assiganment2"
+    "build": "wp-pwa build UXX221Assignment2"
   }
 }
